# tuya-local

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  .yamllint.yaml  ACKNOWLEDGEMENTS.md  AGENTS.md  CREATING_DEVICES_WITH_AGENT.md  DEVICES.md  DEVICE_DETAILS.md  LICENSE.md  README.md  SECURITY.md  atmosc_a_series.yaml  build-release.sh  custom_components.json  custom_updater.json  elspet_cat_litterbox.yaml  goldair_heater.py  hacs.json  inlang.config.js  pyproject.toml  quality_scale.yaml  requirements-dev.txt  requirements-first.txt  requirements.txt  ruff.json  setup.cfg  sonar-project.properties  yamllint.json  yoevu_fan_light_dimmable.yaml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md  sizeBuckets.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  new-device.md  new-device.yaml  product-id.yml
.github/agents/: my-agent.md
.github/workflows/: hacs-validate.yml  hassfest-validate.yml  jsontests.yml  label-pr-size.yml  linting.yml  release.yml  sync-upstream.yml  sync.yml  tests.yml  upstream-sync.yml  yamltests.yml
component/: goldair_heater.py
component/climate/: goldair_heater.py
component/light/: goldair_heater.py
component/lock/: goldair_heater.py
component/sensor/: goldair_heater.py
custom_components/goldair_climate/: __init__.py  binary_sensor.py  climate.py  config_flow.py  configuration.py  const.py  device.py  light.py  lock.py  manifest.json  sensor.py  strings.json
custom_components/ledvance_local/: __init__.py  binary_sensor.py  config_flow.py  const.py  cover.py  device.py  diagnostics.py  entity.py  icons.json  light.py  lock.py  manifest.json  number.py  remote.py  select.py  sensor.py  switch.py  time.py  vacuum.py
custom_components/tuya_local/: Wellio_D008A_20L_dehumidifier.yaml  __init__.py  alarm_control_panel.py  aquatech_x8_fusion_water_heater.yaml  binary_sensor.py  button.py  camera.py  climate.py  cloud.py  config_flow.py  configuration.py  const.py  cover.py  datetime.py  device.py  device_scanner.py  diagnostics.py  elegrp_smart_dimmer_dtr10&30.yaml  elegrp_smart_senor_switch_sss10&30.yaml  elegrp_smart_switch_spn10&30 .yaml  entity.py  event.py  fan.py  humidifier.py  (+27 more)
goldair_climate/: __init__.py  climate.py  light.py  lock.py  sensor.py
tests/: const.py  helpers.py  test_alarm_control_panel.py  test_binary_sensor.py  test_button.py  test_camera.py  test_climate.py  test_cloud.py  test_config_flow.py  test_config_flow_extended.py  test_cover.py  test_cover_unit.py  test_datetime.py  test_datetime_unit.py  test_device.py  test_device_config.py  test_diagnostics.py  test_discovery.py  test_entity.py  test_event.py  test_fan.py  test_humidifier.py  test_infrared.py  test_lawn_mower.py  test_light.py  test_lock.py  test_number.py  test_pyproject_build.py  test_remote.py  test_remote_unit.py  test_select.py  test_sensor.py  test_sensor_delta.py  test_siren.py  test_subdevice.py  test_switch.py  test_text.py  test_time.py  test_translations.py  test_vacuum.py  (+2 more)
util/: best_match.py  catalog.py  common_funcs.py  config_match.py  duplicates.py  entities.py  match_against.py  products.py  translation_candidates.py  untranslated_entities.py  untranslated_select.py
(+2885 files in other folders)
