[project]
name = "Tuya-Local"
description = "A Home Assistant integration for local control of Tuya devices."
version = "2026.4.3"
requires-python = ">3.14.2"
dependencies = [
  "tinytuya~=1.18.0",
  "tuya-device-sharing-sdk~=0.2.4"
]
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"

[dependency-groups]
dev = [
  "fuzzywuzzy",
  "infrared-protocols~=1.1",
  "levenshtein",
  "PyTurboJPEG~=1.8.0",
  "pytest-homeassistant-custom-component==0.13.322",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "ruff",
  "yamllint"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
  "F",     # pyflakes
  "E",     # pycodestyle
  "W",     # pycodestyle warnings
#  "S",     # flake8-bandit
#  "B",     # flake8-bugbear
  "A",    # flake8-builtins
]
ignore = [
  "E501",  # Duplicate of format rule, hits on tests
]